# perseus-actix-webauthn-rs

./: LICENSE  README.md
client/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: config.rs  error_pages.rs  global_state.rs  input.css  main.rs
client/src/components/: authorized.rs  mod.rs  navbar.rs  register_browser.rs  register_server.rs
client/src/service/: actions.rs  mod.rs
client/src/templates/: index.rs  mod.rs  register.rs  settings.rs
client/src/utils/: group.rs  log.rs  mod.rs
server/: .gitignore  Cargo.toml  README.md
server/certs/: ca.cfg.example  server.cfg.example  setup-ssl.ps1
server/src/: actions.rs  auth.rs  config.rs  errors.rs  index.html  main.rs  models.rs  session_store.rs
